recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:10: error: not found: value other
    move(src,other)
             ^SplitHanoi1:12: error: not found: value other
    move(other,dst)
         ^